<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:opencv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <org.opencv.android.JavaCameraView
        android:id="@+id/CameraView"
        android:layout_width="399dp"
        android:layout_height="256dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        opencv:camera_id="any"
        opencv:show_fps="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/original"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sobel_id"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/btn_blur_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeBlur"
        android:text="@string/blur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameraView"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/btn_gray_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeGray"
        android:text="@string/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.808"
        app:layout_constraintStart_toEndOf="@+id/btn_blur_id"
        app:layout_constraintTop_toBottomOf="@+id/CameraView"
        app:layout_constraintVertical_bias="0.407" />

    <SeekBar
        android:id="@+id/sldSeekBarWidth_id"
        android:layout_width="298dp"
        android:layout_height="37dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blur_id"
        app:layout_constraintVertical_bias="0.642" />

    <SeekBar
        android:id="@+id/sldSeekBarHeight_id"
        android:layout_width="298dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sldSeekBarWidth_id"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blur_width"
        app:layout_constraintBottom_toTopOf="@+id/sldSeekBarHeight_id"
        app:layout_constraintEnd_toStartOf="@+id/sldSeekBarWidth_id"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blur_id"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/blur_height_id"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:text="@string/blur_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/sldSeekBarHeight_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.662" />

    <Button
        android:id="@+id/btn_original_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeOriginal"
        android:text="@string/original"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_gray_id"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toEndOf="@+id/btn_blur_id"
        app:layout_constraintTop_toBottomOf="@+id/CameraView"
        app:layout_constraintVertical_bias="0.407" />

    <Button
        android:id="@+id/btn_drawn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeDrawn"
        android:text="@string/drawn"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_blur_id"
        app:layout_constraintVertical_bias="0.433" />

    <Button
        android:id="@+id/btn_sobel_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeSobel"
        android:text="@string/sobel"
        app:layout_constraintBottom_toTopOf="@+id/sldSeekBarWidth_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toEndOf="@+id/btn_drawn_id"
        app:layout_constraintTop_toBottomOf="@+id/btn_original_id"
        app:layout_constraintVertical_bias="0.409" />

    <Button
        android:id="@+id/btn_DrawLineInContours_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:onClick="onChangeDrawLineInContours"
        android:text="@string/drawContours"
        app:layout_constraintBottom_toTopOf="@+id/sldSeekBarWidth_id"
        app:layout_constraintStart_toEndOf="@+id/btn_sobel_id"
        app:layout_constraintTop_toBottomOf="@+id/btn_gray_id"
        app:layout_constraintVertical_bias="0.406" />

    <ImageView
        android:id="@+id/imageView_id"
        android:layout_width="271dp"
        android:layout_height="147dp"
        android:contentDescription="@string/imageCroped"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CameraView"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btn_crop_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChangeCrop"
        android:text="@string/Crop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toEndOf="@+id/imageView_id"
        app:layout_constraintTop_toBottomOf="@+id/CameraView"
        app:layout_constraintVertical_bias="0.236" />


</androidx.constraintlayout.widget.ConstraintLayout>

<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".MainActivity">-->

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="387dp"-->
<!--        android:layout_height="221dp"-->
<!--        android:contentDescription="@string/logo_img"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.333"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.213"-->
<!--        app:srcCompat="@drawable/logotipo" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="97dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:backgroundTint="@color/teal_700"-->
<!--        app:icon="@android:drawable/ic_menu_gallery"-->
<!--        app:iconPadding="24dp"-->
<!--        app:iconSize="64dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.165"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.844" />-->

<!--    <Button-->
<!--        android:id="@+id/button4"-->
<!--        android:layout_width="95dp"-->
<!--        android:layout_height="84dp"-->
<!--        android:backgroundTint="@color/design_default_color_secondary_variant"-->
<!--        app:icon="@android:drawable/ic_menu_camera"-->
<!--        app:iconSize="64dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.821"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.84" />-->

<!--</androidx.constraintlayout.widget.ConstraintLayout>-->